appmesh/manifests/base.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: howto-k8s-http2
  labels:
    mesh: howto-k8s-http2
    appmesh.k8s.aws/sidecarInjectorWebhook: enabled
---
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: howto-k8s-http2
spec:
  ports:
    - port: 8080
      name: http2
  selector:
    app: client
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: howto-k8s-http2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: app
          image: ghcr.io/zirain/color_client
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: red
  namespace: howto-k8s-http2
spec:
  ports:
    - port: 8080
      name: http2
  selector:
    app: color
    version: red
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: red
  namespace: howto-k8s-http2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: color
      version: red
  template:
    metadata:
      labels:
        app: color
        version: red
    spec:
      containers:
        - name: app
          image: ghcr.io/zirain/color_server
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: blue
  namespace: howto-k8s-http2
spec:
  ports:
    - port: 8080
      name: http2
  selector:
    app: color
    version: blue
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue
  namespace: howto-k8s-http2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: color
      version: blue
  template:
    metadata:
      labels:
        app: color
        version: blue
    spec:
      containers:
        - name: app
          image: ghcr.io/zirain/color_server
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: green
  namespace: howto-k8s-http2
spec:
  ports:
    - port: 8080
      name: http2
  selector:
    app: color
    version: green
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green
  namespace: howto-k8s-http2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: color
      version: green
  template:
    metadata:
      labels:
        app: color
        version: green
    spec:
      containers:
        - name: app
          image: ghcr.io/zirain/color_server
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: color
  namespace: howto-k8s-http2
spec:
  ports:
    - port: 8080
      name: http2
