appmesh/manifests/manifest.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: howto-k8s-http2
  labels:
    mesh: howto-k8s-http2
    appmesh.k8s.aws/sidecarInjectorWebhook: enabled
---
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: color
  namespace: howto-k8s-http2
spec:
  awsName: color.howto-k8s-http2.svc.cluster.local
  provider:
    virtualRouter:
      virtualRouterRef:
        name: color
